2008-03-29  Aaron Bockover  <abock@gnome.org>

	* libbanshee/gst-playback-0.10.c: Actually set the pipeline to NULL, not
	PAUSED when stopping the pipeline so any resources locked by the pipeline
	are released

	* src/Core/Banshee.Services/Banshee.Sources/Source.cs: Added ClearMessages

	* src/Extensions/Banshee.AudioCd/Banshee.AudioCd/AudioCdDiscModel.cs:
	Search for metadata using MusicBrainz

	* src/Extensions/Banshee.AudioCd/Banshee.AudioCd/AudioCdSource.cs:
	Show status messages when searching for metadata and ejecting; if the
	playing track is located on the disc that is to be ejected, stop the
	playback before ejecting to release the device lock

	* src/Extensions/Banshee.AudioCd/Banshee.AudioCd/AudioCdTrackInfo.cs:
	Hold a reference to the model on each track in the model so it can
	be checked when ejecting

2008-03-29  Gabriel Burt  <gabriel.burt@gmail.com>

	Thanks to Allan Day for suggesting these changes.

	* src/Clients/Nereid/Nereid/PlayerInterface.cs: Change the title to be
	"title by artist" instead of "title (artist)".

	* src/Extensions/Banshee.NotificationArea/Banshee.NotificationArea/NotificationAreaService.cs:
	Change the skip button text to 'Skip this item' instead of 'Play next item'.

2008-03-29  Sebastian Dröge  <slomo@circular-chaos.org>

	* libbanshee/gst-transcode-0.10.c:
	Remove 'const' keyword from the output_uri as we don't use it as
	const and this produces compiler warnings.

2008-03-29  Alexander Hixon  <hixon.alexander@mediati.org>

	* src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackRepeatActions.cs:
	Simple fix that removes the mnemonic conflict between 'Repeat Single' and
	'Next'. Closes BGO #501889. Based on patch from Alex Kloss.

2008-03-29  Alexander Hixon  <hixon.alexander@mediati.org>

	* src/Core/Banshee.ThickClient/Banshee.Gui/PlaybackActions.cs: Remember
	the shuffle state over restarts. Fixes BGO #523681.

	* src/Core/Banshee.Widgets/Banshee.Widgets/HoverImageButton.cs: