@@ -46,7 +46,6 @@ namespace Banshee.Widgets
         
         private string empty_message;
         private bool ready = false;
-        private StateType current_state = StateType.Normal;
 
         private event EventHandler filter_changed;
         private event EventHandler entry_changed;
@@ -95,6 +94,7 @@ namespace Banshee.Widgets
             box.ShowAll();
 
             entry.StyleSet += OnInnerEntryStyleSet;
+            entry.StateChanged += OnInnerEntryStateChanged;
             entry.FocusInEvent += OnInnerEntryFocusEvent;
             entry.FocusOutEvent += OnInnerEntryFocusEvent;
             entry.Changed += OnInnerEntryChanged;
@@ -194,26 +194,25 @@ namespace Banshee.Widgets
             return false;
         }
 
-        private void OnInnerEntryStyleSet(object o, StyleSetArgs args)
+        private void UpdateStyle ()
         {
-            Gdk.Color color = entry.Style.Base (current_state);
-            filter_button.ModifyBg (current_state, color);
-            clear_button.ModifyBg (current_state, color);
-
+            Gdk.Color color = entry.Style.Base (entry.State);
+            filter_button.ModifyBg (entry.State, color);
+            clear_button.ModifyBg (entry.State, color);
+            
             box.BorderWidth = (uint)entry.Style.XThickness;
         }
         
-        public new bool Sensitive {
-                get { return current_state == StateType.Normal; }
-                set {
-                    current_state = value ? StateType.Normal : StateType.Insensitive;
-                    box.Sensitive = value;
-                    
-                    // Now, redraw the background and text colors.
-                    OnInnerEntryStyleSet (null, null);
-                }
-            }
-
+        private void OnInnerEntryStyleSet (object o, StyleSetArgs args)
+        {
+            UpdateStyle ();
+        }
+        
+        private void OnInnerEntryStateChanged (object o, EventArgs args)
+        {
+            UpdateStyle ();
+        }
+        
         private void OnInnerEntryFocusEvent(object o, EventArgs args)
         {
             QueueDraw();
